examples/test/testpolicy3935.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3935
  namespace: namespace175
spec:
  podSelector:
    matchLabels:
      key19: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value11
          key15: value5
      podSelector:
        matchLabels:
          key42: value20
          key19: value17
